Renew JWT token in HttpOnly cookie (#14)
